// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage renders with all props 1`] = `
<DocumentFragment>
  <div
    align="middle"
    class="ant-col ant-col-14 mt3 mb3"
    justify="center"
  >
    <div
      class="ant-row"
    >
      <div
        class="ant-col ant-col-24"
      >
        <h3
          class="f2 sm-f3"
        >
          Error !
        </h3>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-col ant-col-24"
      >
        <h3
          class="f3 normal sm-f4"
        >
          <span>
            Detail about the error
          </span>
        </h3>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-col ant-col-24"
      >
        <img
          alt="ERROR"
          src="image_src"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorPage renders with default detail 1`] = `
<DocumentFragment>
  <div
    align="middle"
    class="ant-col ant-col-14 mt3 mb3"
    justify="center"
  >
    <div
      class="ant-row"
    >
      <div
        class="ant-col ant-col-24"
      >
        <h3
          class="f2 sm-f3"
        >
          Error !
        </h3>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-col ant-col-24"
      >
        <img
          alt="ERROR"
          src="image_src"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
